Pushing this mess

--- a/universe-rocketlander/config.json
+++ b/universe-rocketlander/config.json
@@ -1,18 +1,18 @@
 {
-  "game": "Pong-v0",
+  "game": "PongDeterministic-v0",
   "batch": 32,
-  "memory_size": 100000,
+  "memory_size": 1000000,
   "history_length": 4,
-  "target_update_freq": 50000,
+  "target_update_freq": 10000,
   "discount_factor": 0.99,
   "action_repeat": 4,
   "update_freq": 4,
-  "learning_rate": 0.00025,
+  "learning_rate": 0.0001,
   "grad_momentum": 0.95,
   "squared_grad_momentum": 0.95,
   "min_squared_grad": 0.01,
   "init_eps": 1,
-  "final_eps": 0.1,
+  "final_eps": 0.02,
   "final_expl_frame": 100000,
   "replay_start": 50000,
   "no_op_max": 30,
